[tool.poetry]
name = "safegraph_neo4j"
version = "0.1.0"
description = "Pipeline for SafeGraph COVID-19 mobility data to Neo4j DB"
authors = ["Ethan Ho <eho@tacc.utexas.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
neo4j = "^4.3.3"
progress = "^1.5"
dask = {extras = ["distributed", "dataframe"], version = "^2021.7.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
